[package]
name = "hyprcursor"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Rust bindings for hyprcursor"
repository = "https://github.com/morr0ne/rusty-hyprcursor"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.19.2", default-features = false }
libhyprcursor-sys = { path = "libhyprcursor-sys", version = "0.1.0" }

[workspace]
members = ["libhyprcursor-sys"]
