[package]
name = "libhyprcursor-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Native bindings for libhyprcursor"
repository = "https://github.com/morr0ne/rusty-hyprcursor"
readme = "../README.md"

[dependencies]
cairo-sys-rs = "0.19.2"

[build-dependencies]
pkg-config = "0.3.30"
