[package]
name = "libhyprcursor-sys"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Native bindings for libhyprcursor"
repository = "https://github.com/morr0ne/rusty-hyprcursor"
readme = "../README.md"
include = ["src/**/*.rs", "../README.md", "../LICENSE"]

[dependencies]
cairo-sys-rs = "0.19.2"

[build-dependencies]
pkg-config = "0.3.30"
